Returning errors array into to ListCanaryObjects response
