# pkg/api/prog/prog.pb.go
@@ -615,6 +615,7 @@ type ListCanaryObjectsResponse struct {
 	unknownFields protoimpl.UnknownFields
 
 	Objects []*UnstructuredObject `protobuf:"bytes,1,rep,name=objects,proto3" json:"objects,omitempty"`
+	Errors  []*ListError          `protobuf:"bytes,2,rep,name=errors,proto3" json:"errors,omitempty"`
 }
 
 func (x *ListCanaryObjectsResponse) Reset() {
@@ -652,6 +653,13 @@ func (*ListCanaryObjectsResponse) Descriptor() ([]byte, []int) {
 func (x *ListCanaryObjectsResponse) GetObjects() []*UnstructuredObject {
 	if x != nil {
 		return x.Objects
+	}
+	return nil
+}
+
+func (x *ListCanaryObjectsResponse) GetErrors() []*ListError {
+	if x != nil {
+		return x.Errors
 	}
 	return nil
 }
@@ -734,53 +742,56 @@ var file_api_prog_prog_proto_rawDesc = []byte{
 	0x73, 0x70, 0x61, 0x63, 0x65, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x09, 0x6e, 0x61, 0x6d,
 	0x65, 0x73, 0x70, 0x61, 0x63, 0x65, 0x12, 0x21, 0x0a, 0x0c, 0x63, 0x6c, 0x75, 0x73, 0x74, 0x65,
 	0x72, 0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x03, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0b, 0x63, 0x6c,
-	0x75, 0x73, 0x74, 0x65, 0x72, 0x4e, 0x61, 0x6d, 0x65, 0x22, 0x4a, 0x0a, 0x19, 0x4c, 0x69, 0x73,
+	0x75, 0x73, 0x74, 0x65, 0x72, 0x4e, 0x61, 0x6d, 0x65, 0x22, 0x6e, 0x0a, 0x19, 0x4c, 0x69, 0x73,
 	0x74, 0x43, 0x61, 0x6e, 0x61, 0x72, 0x79, 0x4f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x73, 0x52, 0x65,
 	0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x12, 0x2d, 0x0a, 0x07, 0x6f, 0x62, 0x6a, 0x65, 0x63, 0x74,
 	0x73, 0x18, 0x01, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x13, 0x2e, 0x55, 0x6e, 0x73, 0x74, 0x72, 0x75,
 	0x63, 0x74, 0x75, 0x72, 0x65, 0x64, 0x4f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x52, 0x07, 0x6f, 0x62,
-	0x6a, 0x65, 0x63, 0x74, 0x73, 0x32, 0xde, 0x04, 0x0a, 0x1a, 0x50, 0x72, 0x6f, 0x67, 0x72, 0x65,
-	0x73, 0x73, 0x69, 0x76, 0x65, 0x44, 0x65, 0x6c, 0x69, 0x76, 0x65, 0x72, 0x79, 0x53, 0x65, 0x72,
-	0x76, 0x69, 0x63, 0x65, 0x12, 0x4d, 0x0a, 0x0a, 0x47, 0x65, 0x74, 0x56, 0x65, 0x72, 0x73, 0x69,
-	0x6f, 0x6e, 0x12, 0x12, 0x2e, 0x47, 0x65, 0x74, 0x56, 0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e, 0x52,
-	0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x13, 0x2e, 0x47, 0x65, 0x74, 0x56, 0x65, 0x72, 0x73,
-	0x69, 0x6f, 0x6e, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x16, 0x82, 0xd3, 0xe4,
-	0x93, 0x02, 0x10, 0x12, 0x0e, 0x2f, 0x76, 0x31, 0x2f, 0x70, 0x64, 0x2f, 0x76, 0x65, 0x72, 0x73,
-	0x69, 0x6f, 0x6e, 0x12, 0x54, 0x0a, 0x0c, 0x4c, 0x69, 0x73, 0x74, 0x43, 0x61, 0x6e, 0x61, 0x72,
-	0x69, 0x65, 0x73, 0x12, 0x14, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x43, 0x61, 0x6e, 0x61, 0x72, 0x69,
-	0x65, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x15, 0x2e, 0x4c, 0x69, 0x73, 0x74,
-	0x43, 0x61, 0x6e, 0x61, 0x72, 0x69, 0x65, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65,
-	0x22, 0x17, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x11, 0x12, 0x0f, 0x2f, 0x76, 0x31, 0x2f, 0x70, 0x64,
-	0x2f, 0x63, 0x61, 0x6e, 0x61, 0x72, 0x69, 0x65, 0x73, 0x12, 0x52, 0x0a, 0x09, 0x47, 0x65, 0x74,
-	0x43, 0x61, 0x6e, 0x61, 0x72, 0x79, 0x12, 0x11, 0x2e, 0x47, 0x65, 0x74, 0x43, 0x61, 0x6e, 0x61,
-	0x72, 0x79, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x12, 0x2e, 0x47, 0x65, 0x74, 0x43,
-	0x61, 0x6e, 0x61, 0x72, 0x79, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1e, 0x82,
-	0xd3, 0xe4, 0x93, 0x02, 0x18, 0x12, 0x16, 0x2f, 0x76, 0x31, 0x2f, 0x70, 0x64, 0x2f, 0x63, 0x61,
-	0x6e, 0x61, 0x72, 0x69, 0x65, 0x73, 0x2f, 0x7b, 0x6e, 0x61, 0x6d, 0x65, 0x7d, 0x12, 0x69, 0x0a,
-	0x12, 0x49, 0x73, 0x46, 0x6c, 0x61, 0x67, 0x67, 0x65, 0x72, 0x41, 0x76, 0x61, 0x69, 0x6c, 0x61,
-	0x62, 0x6c, 0x65, 0x12, 0x1a, 0x2e, 0x49, 0x73, 0x46, 0x6c, 0x61, 0x67, 0x67, 0x65, 0x72, 0x41,
-	0x76, 0x61, 0x69, 0x6c, 0x61, 0x62, 0x6c, 0x65, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
-	0x1b, 0x2e, 0x49, 0x73, 0x46, 0x6c, 0x61, 0x67, 0x67, 0x65, 0x72, 0x41, 0x76, 0x61, 0x69, 0x6c,
-	0x61, 0x62, 0x6c, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1a, 0x82, 0xd3,
-	0xe4, 0x93, 0x02, 0x14, 0x12, 0x12, 0x2f, 0x76, 0x31, 0x2f, 0x70, 0x64, 0x2f, 0x63, 0x72, 0x64,
-	0x2f, 0x66, 0x6c, 0x61, 0x67, 0x67, 0x65, 0x72, 0x12, 0x71, 0x0a, 0x13, 0x4c, 0x69, 0x73, 0x74,
-	0x4d, 0x65, 0x74, 0x72, 0x69, 0x63, 0x54, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65, 0x73, 0x12,
-	0x1b, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x4d, 0x65, 0x74, 0x72, 0x69, 0x63, 0x54, 0x65, 0x6d, 0x70,
-	0x6c, 0x61, 0x74, 0x65, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1c, 0x2e, 0x4c,
-	0x69, 0x73, 0x74, 0x4d, 0x65, 0x74, 0x72, 0x69, 0x63, 0x54, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74,
-	0x65, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1f, 0x82, 0xd3, 0xe4, 0x93,
-	0x02, 0x19, 0x12, 0x17, 0x2f, 0x76, 0x31, 0x2f, 0x70, 0x64, 0x2f, 0x6d, 0x65, 0x74, 0x72, 0x69,
-	0x63, 0x5f, 0x74, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65, 0x73, 0x12, 0x69, 0x0a, 0x11, 0x4c,
-	0x69, 0x73, 0x74, 0x43, 0x61, 0x6e, 0x61, 0x72, 0x79, 0x4f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x73,
-	0x12, 0x19, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x43, 0x61, 0x6e, 0x61, 0x72, 0x79, 0x4f, 0x62, 0x6a,
-	0x65, 0x63, 0x74, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x1a, 0x2e, 0x4c, 0x69,
-	0x73, 0x74, 0x43, 0x61, 0x6e, 0x61, 0x72, 0x79, 0x4f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x73, 0x52,
-	0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1d, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x17, 0x12,
-	0x15, 0x2f, 0x76, 0x31, 0x2f, 0x70, 0x64, 0x2f, 0x63, 0x61, 0x6e, 0x61, 0x72, 0x79, 0x5f, 0x6f,
-	0x62, 0x6a, 0x65, 0x63, 0x74, 0x73, 0x42, 0x30, 0x5a, 0x2e, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62,
-	0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x77, 0x65, 0x61, 0x76, 0x65, 0x77, 0x6f, 0x72, 0x6b, 0x73, 0x2f,
-	0x70, 0x72, 0x6f, 0x67, 0x72, 0x65, 0x73, 0x73, 0x69, 0x76, 0x65, 0x2d, 0x64, 0x65, 0x6c, 0x69,
-	0x76, 0x65, 0x72, 0x79, 0x2f, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
+	0x6a, 0x65, 0x63, 0x74, 0x73, 0x12, 0x22, 0x0a, 0x06, 0x65, 0x72, 0x72, 0x6f, 0x72, 0x73, 0x18,
+	0x02, 0x20, 0x03, 0x28, 0x0b, 0x32, 0x0a, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x45, 0x72, 0x72, 0x6f,
+	0x72, 0x52, 0x06, 0x65, 0x72, 0x72, 0x6f, 0x72, 0x73, 0x32, 0xde, 0x04, 0x0a, 0x1a, 0x50, 0x72,
+	0x6f, 0x67, 0x72, 0x65, 0x73, 0x73, 0x69, 0x76, 0x65, 0x44, 0x65, 0x6c, 0x69, 0x76, 0x65, 0x72,
+	0x79, 0x53, 0x65, 0x72, 0x76, 0x69, 0x63, 0x65, 0x12, 0x4d, 0x0a, 0x0a, 0x47, 0x65, 0x74, 0x56,
+	0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e, 0x12, 0x12, 0x2e, 0x47, 0x65, 0x74, 0x56, 0x65, 0x72, 0x73,
+	0x69, 0x6f, 0x6e, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x13, 0x2e, 0x47, 0x65, 0x74,
+	0x56, 0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22,
+	0x16, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x10, 0x12, 0x0e, 0x2f, 0x76, 0x31, 0x2f, 0x70, 0x64, 0x2f,
+	0x76, 0x65, 0x72, 0x73, 0x69, 0x6f, 0x6e, 0x12, 0x54, 0x0a, 0x0c, 0x4c, 0x69, 0x73, 0x74, 0x43,
+	0x61, 0x6e, 0x61, 0x72, 0x69, 0x65, 0x73, 0x12, 0x14, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x43, 0x61,
+	0x6e, 0x61, 0x72, 0x69, 0x65, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x15, 0x2e,
+	0x4c, 0x69, 0x73, 0x74, 0x43, 0x61, 0x6e, 0x61, 0x72, 0x69, 0x65, 0x73, 0x52, 0x65, 0x73, 0x70,
+	0x6f, 0x6e, 0x73, 0x65, 0x22, 0x17, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x11, 0x12, 0x0f, 0x2f, 0x76,
+	0x31, 0x2f, 0x70, 0x64, 0x2f, 0x63, 0x61, 0x6e, 0x61, 0x72, 0x69, 0x65, 0x73, 0x12, 0x52, 0x0a,
+	0x09, 0x47, 0x65, 0x74, 0x43, 0x61, 0x6e, 0x61, 0x72, 0x79, 0x12, 0x11, 0x2e, 0x47, 0x65, 0x74,
+	0x43, 0x61, 0x6e, 0x61, 0x72, 0x79, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a, 0x12, 0x2e,
+	0x47, 0x65, 0x74, 0x43, 0x61, 0x6e, 0x61, 0x72, 0x79, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73,
+	0x65, 0x22, 0x1e, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x18, 0x12, 0x16, 0x2f, 0x76, 0x31, 0x2f, 0x70,
+	0x64, 0x2f, 0x63, 0x61, 0x6e, 0x61, 0x72, 0x69, 0x65, 0x73, 0x2f, 0x7b, 0x6e, 0x61, 0x6d, 0x65,
+	0x7d, 0x12, 0x69, 0x0a, 0x12, 0x49, 0x73, 0x46, 0x6c, 0x61, 0x67, 0x67, 0x65, 0x72, 0x41, 0x76,
+	0x61, 0x69, 0x6c, 0x61, 0x62, 0x6c, 0x65, 0x12, 0x1a, 0x2e, 0x49, 0x73, 0x46, 0x6c, 0x61, 0x67,
+	0x67, 0x65, 0x72, 0x41, 0x76, 0x61, 0x69, 0x6c, 0x61, 0x62, 0x6c, 0x65, 0x52, 0x65, 0x71, 0x75,
+	0x65, 0x73, 0x74, 0x1a, 0x1b, 0x2e, 0x49, 0x73, 0x46, 0x6c, 0x61, 0x67, 0x67, 0x65, 0x72, 0x41,
+	0x76, 0x61, 0x69, 0x6c, 0x61, 0x62, 0x6c, 0x65, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65,
+	0x22, 0x1a, 0x82, 0xd3, 0xe4, 0x93, 0x02, 0x14, 0x12, 0x12, 0x2f, 0x76, 0x31, 0x2f, 0x70, 0x64,
+	0x2f, 0x63, 0x72, 0x64, 0x2f, 0x66, 0x6c, 0x61, 0x67, 0x67, 0x65, 0x72, 0x12, 0x71, 0x0a, 0x13,
+	0x4c, 0x69, 0x73, 0x74, 0x4d, 0x65, 0x74, 0x72, 0x69, 0x63, 0x54, 0x65, 0x6d, 0x70, 0x6c, 0x61,
+	0x74, 0x65, 0x73, 0x12, 0x1b, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x4d, 0x65, 0x74, 0x72, 0x69, 0x63,
+	0x54, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74,
+	0x1a, 0x1c, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x4d, 0x65, 0x74, 0x72, 0x69, 0x63, 0x54, 0x65, 0x6d,
+	0x70, 0x6c, 0x61, 0x74, 0x65, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1f,
+	0x82, 0xd3, 0xe4, 0x93, 0x02, 0x19, 0x12, 0x17, 0x2f, 0x76, 0x31, 0x2f, 0x70, 0x64, 0x2f, 0x6d,
+	0x65, 0x74, 0x72, 0x69, 0x63, 0x5f, 0x74, 0x65, 0x6d, 0x70, 0x6c, 0x61, 0x74, 0x65, 0x73, 0x12,
+	0x69, 0x0a, 0x11, 0x4c, 0x69, 0x73, 0x74, 0x43, 0x61, 0x6e, 0x61, 0x72, 0x79, 0x4f, 0x62, 0x6a,
+	0x65, 0x63, 0x74, 0x73, 0x12, 0x19, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x43, 0x61, 0x6e, 0x61, 0x72,
+	0x79, 0x4f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x73, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x1a,
+	0x1a, 0x2e, 0x4c, 0x69, 0x73, 0x74, 0x43, 0x61, 0x6e, 0x61, 0x72, 0x79, 0x4f, 0x62, 0x6a, 0x65,
+	0x63, 0x74, 0x73, 0x52, 0x65, 0x73, 0x70, 0x6f, 0x6e, 0x73, 0x65, 0x22, 0x1d, 0x82, 0xd3, 0xe4,
+	0x93, 0x02, 0x17, 0x12, 0x15, 0x2f, 0x76, 0x31, 0x2f, 0x70, 0x64, 0x2f, 0x63, 0x61, 0x6e, 0x61,
+	0x72, 0x79, 0x5f, 0x6f, 0x62, 0x6a, 0x65, 0x63, 0x74, 0x73, 0x42, 0x30, 0x5a, 0x2e, 0x67, 0x69,
+	0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x77, 0x65, 0x61, 0x76, 0x65, 0x77, 0x6f,
+	0x72, 0x6b, 0x73, 0x2f, 0x70, 0x72, 0x6f, 0x67, 0x72, 0x65, 0x73, 0x73, 0x69, 0x76, 0x65, 0x2d,
+	0x64, 0x65, 0x6c, 0x69, 0x76, 0x65, 0x72, 0x79, 0x2f, 0x61, 0x70, 0x69, 0x62, 0x06, 0x70, 0x72,
+	0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -828,23 +839,24 @@ var file_api_prog_prog_proto_depIdxs = []int32{
 	17, // 7: ListMetricTemplatesResponse.templates:type_name -> CanaryMetricTemplate
 	15, // 8: ListMetricTemplatesResponse.errors:type_name -> ListError
 	18, // 9: ListCanaryObjectsResponse.objects:type_name -> UnstructuredObject
-	0,  // 10: ProgressiveDeliveryService.GetVersion:input_type -> GetVersionRequest
-	2,  // 11: ProgressiveDeliveryService.ListCanaries:input_type -> ListCanariesRequest
-	4,  // 12: ProgressiveDeliveryService.GetCanary:input_type -> GetCanaryRequest
-	6,  // 13: ProgressiveDeliveryService.IsFlaggerAvailable:input_type -> IsFlaggerAvailableRequest
-	8,  // 14: ProgressiveDeliveryService.ListMetricTemplates:input_type -> ListMetricTemplatesRequest
-	10, // 15: ProgressiveDeliveryService.ListCanaryObjects:input_type -> ListCanaryObjectsRequest
-	1,  // 16: ProgressiveDeliveryService.GetVersion:output_type -> GetVersionResponse
-	3,  // 17: ProgressiveDeliveryService.ListCanaries:output_type -> ListCanariesResponse
-	5,  // 18: ProgressiveDeliveryService.GetCanary:output_type -> GetCanaryResponse
-	7,  // 19: ProgressiveDeliveryService.IsFlaggerAvailable:output_type -> IsFlaggerAvailableResponse
-	9,  // 20: ProgressiveDeliveryService.ListMetricTemplates:output_type -> ListMetricTemplatesResponse
-	11, // 21: ProgressiveDeliveryService.ListCanaryObjects:output_type -> ListCanaryObjectsResponse
-	16, // [16:22] is the sub-list for method output_type
-	10, // [10:16] is the sub-list for method input_type
-	10, // [10:10] is the sub-list for extension type_name
-	10, // [10:10] is the sub-list for extension extendee
-	0,  // [0:10] is the sub-list for field type_name
+	15, // 10: ListCanaryObjectsResponse.errors:type_name -> ListError
+	0,  // 11: ProgressiveDeliveryService.GetVersion:input_type -> GetVersionRequest
+	2,  // 12: ProgressiveDeliveryService.ListCanaries:input_type -> ListCanariesRequest
+	4,  // 13: ProgressiveDeliveryService.GetCanary:input_type -> GetCanaryRequest
+	6,  // 14: ProgressiveDeliveryService.IsFlaggerAvailable:input_type -> IsFlaggerAvailableRequest
+	8,  // 15: ProgressiveDeliveryService.ListMetricTemplates:input_type -> ListMetricTemplatesRequest
+	10, // 16: ProgressiveDeliveryService.ListCanaryObjects:input_type -> ListCanaryObjectsRequest
+	1,  // 17: ProgressiveDeliveryService.GetVersion:output_type -> GetVersionResponse
+	3,  // 18: ProgressiveDeliveryService.ListCanaries:output_type -> ListCanariesResponse
+	5,  // 19: ProgressiveDeliveryService.GetCanary:output_type -> GetCanaryResponse
+	7,  // 20: ProgressiveDeliveryService.IsFlaggerAvailable:output_type -> IsFlaggerAvailableResponse
+	9,  // 21: ProgressiveDeliveryService.ListMetricTemplates:output_type -> ListMetricTemplatesResponse
+	11, // 22: ProgressiveDeliveryService.ListCanaryObjects:output_type -> ListCanaryObjectsResponse
+	17, // [17:23] is the sub-list for method output_type
+	11, // [11:17] is the sub-list for method input_type
+	11, // [11:11] is the sub-list for extension type_name
+	11, // [11:11] is the sub-list for extension extendee
+	0,  // [0:11] is the sub-list for field type_name
 }
 
 func init() { file_api_prog_prog_proto_init() }
